Enable automatic RSS news ingestion